# RLM

./: .gitignore  README.md  pyproject.toml
data/: benchmark_gemma4_e2b.json  benchmark_gemma4_e4b.json  benchmark_lfm2.5_thinking_1.2b.json  benchmark_qwen2.5_1.5b.json  benchmark_qwen3.5_2b.json  synthetic_test_cases.json
docs/: benchmark_report.md  comprehensive_benchmark_report.md  implementation_divergences.md  implementation_plan.md
examples/: benchmark.py  demo_repl.py  example.py
scripts/: download_oolong.py
src/rlm/: __init__.py  config.py  core.py  llm.py  models.py  prompts.py  repl.py
src/rlm/datasets/: __init__.py  loader.py  oolong.py
tests/: test_rlm.py
